test/library/packages/UnrolledLinkedList/indexOf/testIndexOfHaltEnd.good
testIndexOfHaltEnd.chpl:12: error: halt reached - End index for "unrolledLinkedList.indexOf" out of bounds: 8
